--- a/QAsystem.ipynb
+++ b/QAsystem.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM5SAp0VUkyD/mh6KGKXcWi",
+      "authorship_tag": "ABX9TyNZagG6FNc7FK97Nyp8uY0V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1086,7 +1085,7 @@
         "id": "mctqLnuJSAlO",
         "outputId": "56ebe6a5-a4d0-4668-fa05-8b1a3c4a3369"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1110,8 +1109,7 @@
       "source": [
         "import os\n",
         "\n",
-        "# === Edit these if you used different paths ===\n",
-        "PDF_FOLDER = \"/content/drive/MyDrive/slm_pdfs\"   # where you will put EX1280C.pdf, DM8SE.pdf etc.\n",
+        "PDF_FOLDER = \"/content/drive/MyDrive/slm_pdfs\"\n",
         "OUT_TEXT_DIR = \"/content/pdf_texts\"\n",
         "CHUNKS_JSONL = \"/content/all_chunks.jsonl\"\n",
         "SFT_JSONL = \"/content/sft_dataset.jsonl\"\n",
@@ -1120,11 +1118,9 @@
         "OUTPUT_DIR = \"/content/gemma-qlora-output\"\n",
         "ADAPTER_DIR = \"/content/gemma-qlora-adapter\"\n",
         "\n",
-        "# Model & embedding settings\n",
         "BASE_MODEL = \"Qwen/Qwen2.5-1.5B-Instruct\"\n",
         "EMB_MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
         "\n",
-        "# Chunking & training hyperparams (tune for your GPU)\n",
         "CHUNK_SIZE = 800\n",
         "CHUNK_OVERLAP = 128\n",
         "TOP_K = 3\n",
@@ -1143,7 +1139,7 @@
         },
         "outputId": "2e354f44-96ea-405a-fb6d-04176638bfa2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1170,7 +1166,7 @@
         "id": "mn-HntAZ5Ynq",
         "outputId": "407f82e3-32d9-473b-d5d2-81288b93924e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1220,7 +1216,7 @@
         "id": "BDmn60oF5djn",
         "outputId": "f9ae7a23-7d1f-4525-eb0d-890da580b505"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1271,7 +1267,7 @@
         "id": "28EbtfSr5fZl",
         "outputId": "33fad909-adad-4c38-917b-e5edc784a16a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1310,7 +1306,7 @@
         "id": "IC513Nme5hev",
         "outputId": "06378d64-e6c2-4f99-88c8-d1d93204f6cd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1363,7 +1359,7 @@
         "id": "KdOykOOZ5kHs",
         "outputId": "4ac72c96-17d5-4ebd-82f4-00172069e1ef"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1550,7 +1546,7 @@
         "id": "HrC9bVw75mo5",
         "outputId": "e224c35f-d13d-4eec-d8dd-daaee3d47169"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1764,7 +1760,7 @@
         "id": "LpCi2QwC6JDI",
         "outputId": "7dfe74c7-ca09-4915-eeeb-943ddf83d590"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
